plugins{
    id "java"
}

group "com.github.sk7725"

sourceCompatibility = 14

sourceSets.main.java.srcDirs = ["src/"]
sourceSets.main.resources.srcDirs = ["assets/"]

repositories{
    mavenCentral()
    maven{ url "https://jitpack.io"}
}

ext{
    mindustryVersion = "v121"
    modName = "BetaMindy"
}

dependencies{
    compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
    compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
}

jar{
    archiveFileName = "${modName}.jar"
}

task dexify doLast{
    exec{
        workingDir jar.archiveFile.get().asFile.parent

        if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains("windows")) {
            commandLine "cmd", "/c", "dx", "--dex", "--output=dexed-$buildFilename", "${modName}.jar"
        }else{
            commandLine "dx", "--dex", "--output=dexed-$buildFilename", "${modName}.jar"
        }
    }
}

task buildDex dependsOn "build", "dexify"

tasks.withType(JavaCompile){
        targetCompatibility = 8
        sourceCompatibility = 15
        options.encoding("UTF-8")
        if(JavaVersion.current() != JavaVersion.VERSION_1_8){
            options.compilerArgs.addAll(['--release', '8', '--enable-preview'])
        }

        doFirst{
            options.compilerArgs = options.compilerArgs.findAll{ it != '--enable-preview' }
        }
    }